--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ requires-python = ">=3.12"
 dependencies = [
   "Django>=5,<6",
   "djangorestframework>=3",
+]
+
+[project.optional-dependencies]
+guardian = [
   "django-guardian",
   "djangorestframework-guardian"
 ]
