--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,13 @@
     "[jsonc]": {
         "editor.tabSize": 4
     },
+    // "python.testing.unittestArgs": [
+    //     "-v",
+    //     "-s",
+    //     "./tests",
+    //     "-p",
+    //     "test*.py"
+    // ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
 }
