--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "python.terminal.activateEnvironment": true,
     "editor.formatOnSave": false,
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
@@ -11,13 +13,14 @@
     "[jsonc]": {
         "editor.tabSize": 4
     },
-    // "python.testing.unittestArgs": [
-    //     "-v",
-    //     "-s",
-    //     "./tests",
-    //     "-p",
-    //     "test*.py"
-    // ],
+    "python.testing.unittestArgs": [
+        // "--keepdb",
+        // "-v",
+        // "-s",
+        // "./tests",
+        // "-p",
+        // "test*.py"
+    ],
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true,
 }
