--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 
 [project.optional-dependencies]
 guardian = [
-  "django-guardian",
+  "django-guardian==3.0.3",
   "djangorestframework-guardian"
 ]
 
